WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26959
REGRESSION (
r44674
): Typing is suprisingly slow in password field on reddit.com
https://bugs.webkit.org/show_bug.cgi?id=26959
Summary
REGRESSION (r44674): Typing is suprisingly slow in password field on reddit.com
Darin Adler
Reported
2009-07-03 20:42:51 PDT
Typing text into the password field at reddit.com is very slow and uses a lot of CPU. * STEPS TO REPRODUCE 1. Visit
http://reddit.com
2. Make sure you are logged out, this click an arrow next to an article, presenting the login dialog 3. Type a username into the username field 4. Type a password into the password field * RESULTS There is a long delay after each character is typed in the password field.
Attachments
patch
(9.10 KB, patch)
2009-07-03 20:54 PDT
,
Darin Adler
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2009-07-03 20:43:24 PDT
<
rdar://problem/7029882
>
Darin Adler
Comment 2
2009-07-03 20:54:15 PDT
Created
attachment 32250
[details]
patch
Darin Adler
Comment 3
2009-07-03 21:50:54 PDT
http://trac.webkit.org/changeset/45542
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug